# automox-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PRIVACY.md  README.md  SECURITY.md  fastmcp.json  mcp_changelog_marketing.md  pyproject.toml  server.json
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml  security.yml
docs/: api-coverage.md  deployment-security.md  release-notes.md  tool-reference.md
mcpb/: .mcpbignore  README.md  manifest.json  pyproject.toml
mcpb/server/: main.py
scripts/: generate_mcpb_catalog.py  verify_new_apis.sh
src/automox_mcp/: __init__.py  auth.py  client.py  middleware.py  schemas.py  server.py  transport_security.py
src/automox_mcp/prompts/: __init__.py  audit_policy.py  investigate_device.py  onboard_group.py  patch_tuesday.py  security_posture.py  triage_failure.py
src/automox_mcp/resources/: __init__.py  _app_bridge.py  access_certification_app.py  patch_approval_app.py  platform_resources.py  policy_blast_radius_app.py  policy_resources.py  remediation_apply_app.py  servergroup_resources.py  triage_app.py  webhook_resources.py
src/automox_mcp/tools/: __init__.py  account_tools.py  audit_tools.py  audit_v2_tools.py  compound_tools.py  data_extract_tools.py  device_search_tools.py  device_tools.py  event_tools.py  group_tools.py  meta_tools.py  package_tools.py  policy_history_tools.py  policy_tools.py  policy_windows_tools.py  report_tools.py  splashtop_tools.py  vuln_sync_tools.py  webhook_tools.py  worklet_tools.py
src/automox_mcp/utils/: __init__.py  logging.py  organization.py  pagination.py  response.py  sanitize.py  tooling.py  upload.py
src/automox_mcp/workflows/: __init__.py  account.py  audit.py  audit_v2.py  compound.py  data_extracts.py  device_commands.py  device_inventory.py  device_search.py  devices.py  events.py  groups.py  packages.py  policy.py  policy_crud.py  policy_history.py  policy_windows.py  reports.py  splashtop.py  vuln_sync.py  webhooks.py  worklets.py
tests/: conftest.py  exploratory_sweep.py  probe_issue_68.py  smoke_production.py  test_access_certification_app.py  test_auth.py  test_auth_jwt.py  test_compound_output_schema.py  test_config.py  test_doc_tool_counts.py  test_fix_access_cert_2fa.py  test_fix_audit_actor_filter.py  test_fix_auth_config.py  test_fix_blast_radius.py  test_fix_devices_mapping_guard.py  test_fix_events_count.py  test_fix_idempotency_release.py  test_fix_pagination_account_groups.py  test_fix_pagination_devices.py  test_fix_pagination_packages.py  test_fix_pagination_policy.py  test_fix_pagination_policy_history.py  test_fix_pagination_search_extracts.py  test_fix_pagination_vuln_audit.py  test_fix_policy_crash_guards.py  test_fix_policy_idempotency.py  test_fix_policy_runs_time_filter.py  test_fix_saved_searches_page.py  test_fix_servergroup_null.py  test_fix_splashtop.py  test_fix_tooling_pagination.py  test_fix_transport_hardening.py  test_fix_zone_redaction.py  test_http.py  test_http_multipart.py  test_idempotency.py  test_json_logging.py  test_meta_tools.py  test_middleware.py  test_new_tool_registration.py  (+54 more)
