[project]
name = "automox-mcp"
version = "1.0.20"
description = "Official MCP server for Automox"
readme = "README.md"
authors = [
  { name = "Automox" }
]
license = "MIT"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Systems Administration"
]
dependencies = [
  "cryptography>=46.0.7",
  "fastmcp>=3.2.0",
  "httpx>=0.28",
  "pydantic>=2.12",
  "python-dotenv>=1.1"
]

[project.scripts]
automox-mcp = "automox_mcp:main"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=6.0",
  "ruff>=0.4",
  "mypy>=1.9",
  "build>=1.2.2",
  "twine>=5.1"
]

[project.urls]
Homepage = "https://github.com/AutomoxCommunity/automox-mcp"
Repository = "https://github.com/AutomoxCommunity/automox-mcp"
Issues = "https://github.com/AutomoxCommunity/automox-mcp/issues"
Documentation = "https://github.com/AutomoxCommunity/automox-mcp#readme"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
automox_mcp = ["py.typed"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"src/automox_mcp/prompts/*.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.bandit]
targets = ["src/"]
exclude_dirs = ["tests", ".venv"]

[tool.uv]
constraint-dependencies = [
  "authlib>=1.6.11",      # CVE-2025-68158, GHSA-jj8c-mmj3-mmgv: CSRF in cache-backed state storage
  "cryptography>=46.0.6", # CVE-2026-26007, CVE-2026-34073
  "fastmcp>=3.2.0",       # CVE-2025-69196, CVE-2025-64340, CVE-2026-27124, GHSA-rcfx-77hg-w2wv
  "jaraco-context>=6.1.0",# CVE-2026-23949
  "mcp>=1.23.0",          # CVE-2025-66416
  "pygments>=2.20.0",     # CVE-2026-4539
  "pyjwt>=2.12.0",        # CVE-2026-32597
  "pytest>=9.0.3",            # CVE-2025-71176: /tmp/pytest-of-* privilege escalation
  "python-multipart>=0.0.26", # CVE-2026-24486, CVE-2026-40347
  "requests>=2.33.0",     # CVE-2026-25645
  "urllib3>=2.6.3",        # CVE-2025-66418, CVE-2025-66471, CVE-2026-21441
]

[tool.coverage.run]
source = ["automox_mcp"]

[tool.coverage.report]
show_missing = true
skip_empty = true
