[project]
name = "automox-mcp"
version = "2.2.0"
description = "Official MCP server for Automox"
readme = "README.md"
authors = [
  { name = "Automox" }
]
license = "MIT"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Systems Administration"
]
dependencies = [
  "cryptography>=46.0.7",
  "fastmcp>=3.4.2",
  "httpx>=0.28",
  "pydantic>=2.12",
  "python-dotenv>=1.1"
]

[project.scripts]
automox-mcp = "automox_mcp:main"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=6.0",
  "pytest-randomly>=3.15",
  "ruff>=0.4",
  "mypy>=1.9",
  "build>=1.2.2",
  "twine>=5.1",
  "pre-commit>=4.0",
  "bandit>=1.8"
]

[project.urls]
Homepage = "https://github.com/AutomoxCommunity/automox-mcp"
Repository = "https://github.com/AutomoxCommunity/automox-mcp"
Issues = "https://github.com/AutomoxCommunity/automox-mcp/issues"
Documentation = "https://github.com/AutomoxCommunity/automox-mcp#readme"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
automox_mcp = ["py.typed"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"src/automox_mcp/prompts/*.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.bandit]
targets = ["src/"]
exclude_dirs = ["tests", ".venv"]

[tool.uv]
constraint-dependencies = [
  "authlib>=1.6.11",      # CVE-2025-68158, GHSA-jj8c-mmj3-mmgv: CSRF in cache-backed state storage
  "cryptography>=46.0.6", # CVE-2026-26007, CVE-2026-34073
  "fastmcp>=3.4.2",       # >=3.2.0: CVE-2025-69196, CVE-2025-64340, CVE-2026-27124, GHSA-rcfx-77hg-w2wv; >=3.4.2: OAuth-proxy/cache/header-forwarding hardening (3.2.4/3.3.0)
  "idna>=3.15",           # CVE-2026-45409 (DoS via crafted IDN encoding; supersedes CVE-2024-3651 fix)
  "jaraco-context>=6.1.0",# CVE-2026-23949
  "mcp>=1.27.2",          # >=1.23.0: CVE-2025-66416; >=1.27.2: GHSA-jpw9-pfvf-9f58 (CVSS 7.1, transport session principal binding), GHSA-hvrp-rf83-w775 (CVSS 7.6, experimental-task isolation)
  "pygments>=2.20.0",     # CVE-2026-4539
  "pyjwt>=2.13.0",        # CVE-2026-32597; 2.13.0: PYSEC-2026-175/177/178/179
  "pytest>=9.0.3",            # CVE-2025-71176: /tmp/pytest-of-* privilege escalation
  "python-multipart>=0.0.27", # CVE-2026-24486, CVE-2026-40347, CVE-2026-42561
  "requests>=2.33.0",     # CVE-2026-25645
  "starlette>=1.0.1",     # PYSEC-2026-161: Host-header path injection in URL reconstruction
  "urllib3>=2.7.0",        # CVE-2025-66418, CVE-2025-66471, CVE-2026-21441, CVE-2026-44431, CVE-2026-44432
]

[tool.coverage.run]
source = ["automox_mcp"]

[tool.coverage.report]
show_missing = true
skip_empty = true
